// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > renders basic case correctly 1`] = `
"<div class="">
  <div class=""><input type="checkbox" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with custom color correctly 1`] = `
"<div class="">
  <div class=""><input type="checkbox" class=""></div>
  <div class=""><label class="">Label
      <!--v-if-->
    </label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Checkbox > renders with custom id correctly 1`] = `
"<div class="">
  <div class=""><input id="custom-id" type="checkbox" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with custom input class correctly 1`] = `
"<div class="">
  <div class=""><input type="checkbox" class="w-full h-full"></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with custom name correctly 1`] = `
"<div class="">
  <div class=""><input name="custom-name" type="checkbox" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with custom value correctly 1`] = `
"<div class="">
  <div class=""><input type="checkbox" class="" value="custom-value"></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with disabled correctly 1`] = `
"<div class="">
  <div class=""><input disabled="" type="checkbox" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with help correctly 1`] = `
"<div class="">
  <div class=""><input type="checkbox" class=""></div>
  <div class=""><label class="">Label
      <!--v-if-->
    </label>
    <p class="">Help</p>
  </div>
</div>"
`;

exports[`Checkbox > renders with indeterminate correctly 1`] = `
"<div class="">
  <div class=""><input indeterminate="" type="checkbox" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with label correctly 1`] = `
"<div class="">
  <div class=""><input type="checkbox" class=""></div>
  <div class=""><label class="">Label
      <!--v-if-->
    </label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Checkbox > renders with required correctly 1`] = `
"<div class="">
  <div class=""><input required="" type="checkbox" class=""></div>
  <div class=""><label class="">Label<span class="">*</span></label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Checkbox > renders with slot label correctly 1`] = `
"<div class="">
  <div class=""><input type="checkbox" class=""></div>
  <div class=""><label class="">Label slot
      <!--v-if-->
    </label>
    <!--v-if-->
  </div>
</div>"
`;
